# lean-autoformal

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
app/: cli.py  web.py
data/processed/doc_chunks/: doc_chunk_00000.json  doc_chunk_00001.json
data/processed/lean_chunks/: lean_chunk_00000.json  lean_chunk_00001.json  lean_chunk_00002.json  lean_chunk_00003.json  lean_chunk_00004.json  lean_chunk_00005.json  lean_chunk_00006.json  lean_chunk_00007.json  lean_chunk_00008.json  lean_chunk_00009.json  lean_chunk_00010.json  lean_chunk_00011.json  lean_chunk_00012.json  lean_chunk_00013.json  lean_chunk_00014.json  lean_chunk_00015.json  lean_chunk_00016.json  lean_chunk_00017.json  lean_chunk_00018.json  lean_chunk_00019.json  lean_chunk_00020.json  lean_chunk_00021.json  lean_chunk_00022.json  lean_chunk_00023.json  lean_chunk_00024.json  lean_chunk_00025.json  lean_chunk_00026.json  lean_chunk_00027.json  lean_chunk_00028.json  lean_chunk_00029.json  lean_chunk_00030.json  lean_chunk_00031.json  lean_chunk_00032.json  lean_chunk_00033.json  lean_chunk_00034.json  lean_chunk_00035.json  lean_chunk_00036.json  lean_chunk_00037.json  lean_chunk_00038.json  lean_chunk_00039.json  (+10733 more)
data/raw/docs/: doc_0000.json
data/vector_store/d937cba8-b84a-4610-862b-61e5fae4a469/: index_metadata.pickle
scripts/: build_vectorstore.py  check_gradio_languages.py  download_lean.py  scrape_docs.py
src/: __init__.py  config.py
src/data/: custom_loader.py  loader.py  processor.py
src/formalization/: pipeline.py  prompts.py  schema.py
src/models/: embeddings.py  llm.py
src/rag/: generator.py  retriever.py
src/utils/: lean_validator.py
